@@ -48,3 +48,5 @@ Thanks to:
   o Sebastian Campbell for reporting a typo in the Andrew and Stock
     data set and pointing out that the core charts, such as line
     charts accept also date variables for the x-axis. 
+  o John Maindonald for providing a simplified version of the
+    WorldBank demo using the WDI package. 
